--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
-  "name": "movie-with-redux",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-styled-components": "^1.8.0",
+    "node-sass": "^4.9.3",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-overdrive": "^0.0.10",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-localstorage-simple": "^2.1.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^3.4.10",
+    "yarn": "^1.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
